k8s-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eco-services-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eco-services
  template:
    metadata:
      labels:
        app: eco-services
    spec:
      containers:
      - name: eco-services
        image: xedicus13/eco-services:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: eco-services-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: eco-services
