k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eco-services-service
spec:
  type: NodePort
  selector:
    app: eco-services
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
